// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelGroup label group compact 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <ul
        aria-label="Label group category"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled pf-m-compact"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1
              </span>
            </span>
          </span>
        </li>
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled pf-m-compact"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                2
              </span>
            </span>
          </span>
        </li>
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled pf-m-compact"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                3
              </span>
            </span>
          </span>
        </li>
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <button
            class="pf-v6-c-label pf-m-overflow pf-m-compact"
            type="button"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1 more
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelGroup label group default 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <ul
        aria-label="Label group category"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1.1
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelGroup label group with category 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group pf-m-category"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <span
        aria-hidden="true"
        class="pf-v6-c-label-group__label"
        id="generated-id"
      >
        category
      </span>
      <ul
        aria-labelledby="generated-id"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1.1
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelGroup label group with category and tooltip 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group pf-m-category"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <span
        aria-hidden="true"
        class="pf-v6-c-label-group__label"
        id="generated-id"
      >
        A very long category name
      </span>
      <ul
        aria-labelledby="generated-id"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1.1
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelGroup label group with closable category 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-label-group pf-m-category"
  >
    <div
      class="pf-v6-c-label-group__main"
    >
      <span
        aria-hidden="true"
        class="pf-v6-c-label-group__label"
        id="generated-id"
      >
        category
      </span>
      <ul
        aria-labelledby="generated-id"
        class="pf-v6-c-label-group__list"
        role="list"
      >
        <li
          class="pf-v6-c-label-group__list-item"
        >
          <span
            class="pf-v6-c-label pf-m-filled"
          >
            <span
              class="pf-v6-c-label__content"
            >
              <span
                class="pf-v6-c-label__text"
              >
                1.1
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
    <div
      class="pf-v6-c-label-group__close"
    >
      <button
        aria-disabled="false"
        aria-label="Close label group"
        aria-labelledby="remove_group_generated-id generated-id"
        class="pf-v6-c-button pf-m-plain pf-m-no-padding"
        data-ouia-component-id="OUIA-Generated-Button-plain-1"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        id="remove_group_generated-id"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
